# open-legis-bg

./: .dockerignore  .dv-index-2010.json  .dv-index-2012.json  .dv-index-2014.json  .dv-index-2016.json  .dv-index-2018.json  .dv-index.json  .env.example  .gitignore  CLAUDE.md  CORRECTIONS.md  DATA_LICENSE  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  build_krb_akn.py  build_zzd_akn.py  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
docs/: adding-an-act.md  api.md  architecture.md  data-model.md  takedown.md  uri-scheme.md
docs/superpowers/plans/: 2026-04-20-open-legis-mvp.md  2026-04-25-dv-sections.md  (+1 more)
src/open_legis/: cli.py  settings.py
tests/: conftest.py  test_akn_parser.py  test_api_aliases.py  test_api_cache_and_cors.py  test_api_dumps.py  test_api_edges.py  test_api_eli.py  test_api_expressions_list.py  test_api_health.py  test_api_negotiation_integration.py  test_api_works_list.py  test_cli.py  test_db.py  test_dumps.py  test_dv_cleaning.py  test_goldens.py  test_goldens_per_format.py  test_loader_integration.py  test_model_schema.py  test_negotiation.py  test_point_in_time.py  test_relations_loader.py  test_renderers_akn.py  test_renderers_json.py  test_renderers_rdf.py  test_rtf_parser_sections.py  test_scaffold.py  test_schemas.py  test_scraper_batch.py  test_search.py  test_settings.py  test_sql_dump.py  test_uri.py  test_validate_classify.py  test_validate_cli.py  test_validate_db.py  test_validate_eli.py  test_validate_fixtures.py  test_validate_mirror.py  test_validators.py
tests/data/: invalid_act.xml  minimal_act.xml  validate_valid.xml
tests/golden/: works.json  zzd_2024_art1.akn.xml  zzd_2024_art1.json  zzd_2024_art1.ttl
(+54815 files in other folders)
