[project]
name = "open-legis"
version = "0.1.0"
description = "An open machine-readable database of Bulgarian legislation"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0.35",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "lxml>=5.3",
  "rdflib>=7.1",
  "typer>=0.12",
  "pyyaml>=6.0",
  "httpx>=0.28.1",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "mcp[cli]>=1.0",
  "slowapi>=0.1.9",
  "striprtf>=0.0.29",
  "pdfminer-six>=20260107",
  "pymupdf>=1.27.2.2",
  "anthropic>=0.96.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "testcontainers[postgres]>=4.8",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-pyyaml",
  "lxml-stubs",
]

[project.scripts]
open-legis = "open_legis.cli:app"
open-legis-mcp = "open_legis.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/open_legis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []

[[tool.mypy.overrides]]
module = ["testcontainers.*", "rdflib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pdfminer-six>=20260107",
    "pypdf>=6.10.2",
]
